After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673833 - Mouse scroll wheel doesn't work with GTK+ 3.4
Mouse scroll wheel doesn't work with GTK+ 3.4
Status: RESOLVED FIXED
Product: libwnck
Classification: Core
Component: general
3.2.x
Other Linux
: Normal major
: ---
Assigned To: libwnck maintainers
libwnck maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-10 11:57 UTC by Sam Morris
Modified: 2012-05-14 15:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix mouse wheel scrolling in pager and task selector (2.51 KB, patch)
2012-05-11 19:49 UTC, Christian Persch
committed Details | Review

Description Sam Morris 2012-04-10 11:57:08 UTC
Since upgrading to GTK+ 3.4, the mouse wheel does nothing when scrolled on top of the window switcher & workspace switcher applets.

According to GTK+'s NEWS file, since GTK+ 3.3.18 "To receive scroll events, widgets must now set either GDK_SCROLL_MASK or GDK_SMOOTH_SCROLL_MASK". VTE suffered from a similar problem in bug 671305 so perhaps gnome-panel also needs to make this change.
Comment 1 Vincent Untz 2012-04-10 15:03:38 UTC
Indeed. Should be rather straight-forward.
Comment 2 Christian Persch 2012-05-11 19:13:23 UTC
-> libwnck.
Comment 3 Christian Persch 2012-05-11 19:49:04 UTC
Created attachment 213885 [details] [review]
Fix mouse wheel scrolling in pager and task selector

Add the GDK_SCROLL_MASK to the window events, and add dummy handling of
GDK_SCROLL_SMOOTH events so as to not crash if they occcur.

Untested but should work :-)

Bug #673833.
Comment 4 Vincent Untz 2012-05-14 15:44:17 UTC
Comment on attachment 213885 [details] [review]
Fix mouse wheel scrolling in pager and task selector

This was not enough for the tasklist, but I committed something else there that makes it work.