pager, selector, tasklist: Fix mouse wheel scrolling with new GTK+

Add the GDK_SCROLL_MASK to the window events, and add dummy handling of
GDK_SCROLL_SMOOTH events so as to not crash if they occcur.

https://bugzilla.gnome.org/show_bug.cgi?id=673833